k8s/apps/vod-arr/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: downloader
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: qbittorrent
    app.kubernetes.io/version: 5.2.3
  name: qbittorrent
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9091
      protocol: TCP
      targetPort: metrics
  selector:
      app.kubernetes.io/component: downloader
      app.kubernetes.io/name: qbittorrent
      app.kubernetes.io/part-of: qbittorrent
  type: ClusterIP
