k8s/apps/vod-arr/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "qBittorrent"
    item.homer.rajsingh.info/subtitle: "Downloader (NordVPN)"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/qbittorrent.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "5"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
  labels:
    homer.rajsingh.info/enabled: "true"
  name: qbittorrent
spec:
  ingressClassName: private
  rules:
    - host: downloader.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - downloader.ankhmorpork.thaum.xyz
      secretName: downloader-ankhmorpork-thaum-xyz-tls
